Criação das validações

--- a/html/index.html
+++ b/html/index.html
@@ -59,7 +59,7 @@
         <p>Feito para ajudar profissionais a expandirem sua rede de contatos.</p>
         <footer>        
             
-            <a href="linkedin.com/in/ferreiraj0ao/" target="_blank" ><img src="/imgs/LinkedIn.png" alt="Logo do LinkedIn" id="img-linkedin"></a>
+            <a href="https://www.linkedin.com/in/ferreiraj0ao/" target="_blank" ><img src="/imgs/LinkedIn.png" alt="Logo do LinkedIn" id="img-linkedin"></a>
             <b>© Todos os direitos reservados</b><br>
         </footer>
     </div>
